# ylems

./: .gitignore  CMakeLists.txt  Elements.md  LICENSE  README.md
include/ylems/: categories.h  elements.h  rules.h
include/ylems/categories/: filter.h  transform.h  transform_or.h
include/ylems/elements/: cycle.h  drop.h  filter.h  iota.h  join.h  memoize.h  push_back.h  range.h  take.h  tee.h  transform.h  transform_or.h  yield.h  zip.h
include/ylems/rules/: abstract.h  algebra.h  is_a_range.h  is_a_yield.h  transfuse.h
include/ylems/utilities/: CycleBuffer.h  Storage.h  detect.h  tuple_fun.h
